--- a/src/styles/entry(shared-layout).css
+++ b/src/styles/entry(shared-layout).css
@@ -20,7 +20,7 @@
   background: linear-gradient(white, rgb(247, 247, 247));
   box-shadow: 3px 3px 5px black;
 
-  transform: rotate(var(--rotation, 0.002turn));
+  /* transform: rotate(var(--rotation, 0.002turn)); */
 }
 
 .entry-img-wrapper {
@@ -103,6 +103,7 @@
   }
 
   .polaroid {
-    transform: rotate(var(--rotation, 0.002turn)) translateX(20px);
+    transform: translateX(20px);
+    /* rotate(var(--rotation, 0.002turn)) */
   }
 }
